# BlackHoleCamera

./: README.md  docker-compose.yml
backup-geodesic/: Initialization.hpp  Integration.hpp  Observation.hpp  Transformation.hpp  main.cpp
notebooks/: BlackHoleCamera.ipynb
src/: CMakeLists.txt  calculation.f90  initialization.f90  integration.f90  main.f90  mtmod.f90  parameters.f90  transformation.f90
src/backup-geodesic/: Calculation.hpp
src/tests/: CMakeLists.txt  calculation_test.pf
